--- a/httpdocs/theme/backend/css/backend/stati.css
+++ b/httpdocs/theme/backend/css/backend/stati.css
@@ -1,3 +1,6 @@
+.pling-nav-tabs a{
+  cursor: pointer;
+}
 .spinning {
     animation: spin 1s infinite linear;
     -webkit-animation: spin2 1s infinite linear;
