--- a/application/modules/backend/views/scripts/index/index.phtml
+++ b/application/modules/backend/views/scripts/index/index.phtml
@@ -45,7 +45,6 @@ $jsonTree = json_encode($this->categories);
         <li class="active"><a class="newuserprojectTab" href="#d3-line" data-toggle="tab">New Members & Projects </a></li>
         <li><a class="downloadsDomainTab" href="#downloadsDomainTab" data-toggle="tab">Downloads Domain</a></li>
         <li><a class="downloadsdailyTab" href="#downloadsdailyTab" data-toggle="tab">Downloads&Payouts daily</a></li>
-        <!-- <li ><a class="downloadsundpayoutsdailyTab" href="#downloadsundpayoutsdailyTab" data-toggle="tab">Downloads vs Payouts daily</a></li> -->
 
         <li><a class="topDownloadsPerDayTab" href="#topDownloadsPerDayTab" data-toggle="tab">Product/Day</a></li>
         <li><a class="topDownloadsPerMonthTab" href="#topDownloadsPerMonthTab" data-toggle="tab">Product/Month</a></li>
@@ -87,12 +86,7 @@ $jsonTree = json_encode($this->categories);
             <div id="downloadsdailyTabContainer" class="d3linepath"></div>
         </div>
 
-        <!--
-           <div id="downloadsundpayoutsdailyTab" class="tab-pane ">
-                <div id="downloadsundpayoutsdailyTabContainer"></div>
-          </div>
-        -->
-
+      
         <div id="downloadsDomainTab" class="tab-pane ">
             <div style="display: block; clear: both">
                 Begin:<input name="filterDownloadsDomainDateBegin" id="filterDownloadsDomainDateBegin" value="<?php echo date("Y-m-j") ?>" />
@@ -116,9 +110,7 @@ $jsonTree = json_encode($this->categories);
             <div style="display: block; clear: both" class="filter">
                 <input name="filterTopDownloadsMonth" id="filterTopDownloadsMonth" value="<?php echo date("Ym") ?>" />                
                 <script type="text/javascript">
-                    $('#filterTopDownloadsMonth').MonthPicker({ StartYear: 2018, ShowIcon: true,MonthFormat:'yymm',OnAfterChooseMonth: function() { 
-                                window.selectedMonth = $(this).val();
-                        }  });
+                    
                 </script>                                
             </div>
             <div id="topDownloadsPerMonthTabContainer" style="display: block;clear: left"></div>
@@ -162,306 +154,15 @@ $jsonTree = json_encode($this->categories);
 </div> <!--end of tab-->
 
 <div id="dataFilter" style="display: none">
- <div id="category-tree-container"></div>
- </div>
-
+<div id="category-tree-container"></div>
+</div>
 <script type="application/javascript">
   var catTree = <?= $jsonTree ?>;  
   var backendView = true;
 </script>
 <script type="application/javascript" src="/theme/react/cat-tree.js"></script>
 
-<script type="text/javascript">
-var indicator = '<span class="glyphicon glyphicon-refresh spinning" style="position: relative; left: 0;top: 0px;"></span>';
-    function createMonthFilter(selectid, triggerEvent) {
-        let html = '<select id="' + selectid + '" style="float: left;">';
-        for (i = 1; i < 10; i++) {
-            let oneMonthsAgo = moment().subtract(i, 'months');
-            if (i == 1) {
-                html = html + '<option selected>' + oneMonthsAgo.format('YYYYMM') + '</option>';
-            } else {
-                html = html + '<option>' + oneMonthsAgo.format('YYYYMM') + '</option>';
-            }
-        }
-        html = html + '</select>';
-        return html;
-    }
-
-    function createMonthFilterWithCurrent(selectid, triggerEvent) {
-        let html = '<select id="' + selectid + '" style="float: left;">';
-        for (i = 0; i < 10; i++) {
-            let oneMonthsAgo = moment().subtract(i, 'months');
-            if (i == 0) {
-                html = html + '<option selected>' + oneMonthsAgo.format('YYYYMM') + '</option>';
-            } else {
-                html = html + '<option>' + oneMonthsAgo.format('YYYYMM') + '</option>';
-            }
-        }
-        html = html + '</select>';
-        return html;
-    }
-
-    $.ajaxSetup({
-        // Disable caching of AJAX responses
-        // Used when debugging
-        cache: false
-    });
-
-    $.getScript("/theme/flatui/js/stati/newUserProject.js");
-    $(".newuserprojectTab").click(function () {
-        $.getScript("/theme/flatui/js/stati/newUserProject.js");
-    });
-
-
-    $(".downloadsdailyTab").click(function () {
-        $('#downloadsdailyTabContainer').empty();
-        $.getScript("/theme/flatui/js/stati/downloadsdaily.js");
-    });
-    $('#numofmonthback').change(function () {
-        $.getScript("/theme/flatui/js/stati/downloadsdaily.js");
-    });
-
-
-    $('button.filterDownloadsDomainDate').click(function () {
-        loadDownloadsDomain();
-    });
-
-    function loadDownloadsDomain() {
-        $('#downloadsDomainTabContainer').empty();
-        let dateBegin = $("#filterDownloadsDomainDateBegin").val();
-        let dateEnd = $("#filterDownloadsDomainDateEnd").val();
-        $.getJSON("/backend/index/getdownloadsdomain?dateBegin=" + dateBegin + "&dateEnd=" + dateEnd, function (response) {
-            let data = response.results;
-            let table = "<table class='tablestati'><thead><tr><td class='number'>CNT</td><td>Domain</td><td class='number'>IS_OWN?</td></tr></thead>";
-            $.each(data, function (index, value) {
-                table = table + '<tr>'
-                    + '<td class="number">' + value.cnt + '</td>'
-                    + '<td >' + value.referer_domain + '</td>'
-                    + '<td class="number">' + value.is_from_own_domain + '</td>'
-                    + '</tr>';
-            });
-            table = table + "</table>";
-            $('#downloadsDomainTabContainer').append(table);
-        });
-    }
-
-    $(".downloadsDomainTab").click(function () {
-        loadDownloadsDomain();
-    });
-
-
-    // topdownloadsperdate
-
-    $('button.filterTopDownloadsDate').click(function () {
-        loadTopdownloadsperday();
-    });
-    $('button.filterTopDownloadsDateClear').click(function () {
-        $('#topDownloadsPerDayTabContainer').empty();
-    });
-
-    function loadTopdownloadsperday() {
-        let date = $("#filterTopDownloadsDate").val();
-        $.getJSON("/backend/index/gettopdownloadsperdate?date=" + date, function (response) {
-            let data = response.results;
-            let table = "<table class='tablestati'><thead><tr><td colspan='7'>" + date + "</td></tr><tr><td>ProjectID</td><td>Username</td><td class='number'>CNT</td><td>Title</td><td>Category</td><td>created_at</td></tr></thead>";
-            $.each(data, function (index, value) {
-                table = table + '<tr>'
-                    + '<td><a target="_blank" href="https://opendesktop.org/p/' + value.project_id + '">'
-                    + value.project_id + '</a></td>'
-                    + '<td>' + value.username + '</td>'
-                    + '<td class="number">' + value.cnt + '</td>'
-                    + '<td>' + value.ptitle + '</td>'
-                    + '<td>' + value.ctitle + '</td>'
-                    + '<td>' + value.pcreated_at + '</td>'
-                    + '</tr>';
-            });
-            table = table + "</table>";
-            $('#topDownloadsPerDayTabContainer').append(table);
-        });
-    } 
-
-    function loadTopdownloadspermonth() {
-        
-        console.log(window.selectedMonth);
-        
-        $('#topDownloadsPerMonthTabContainer').empty();
-        $('#topDownloadsPerMonthTabContainer').append(indicator);
-        $.getJSON("/backend/index/gettopdownloadspermonth?month=" + window.selectedMonth+'&catid='+window.selectedCatid, function (
-            response) {
-            let data = response.results;
-            let table = "<table class='tablestati'><thead><tr><td colspan='7'>" + window.selectedMonth+'_'+window.selectedCatTitle + "</td></tr><tr><td>ProjectID</td><td>Username</td><td class='number'>CNT</td><td>Title</td><td>Category</td><td>created_at</td></tr></thead>";
-            $.each(data, function (index, value) {
-                table = table + '<tr>'
-                    + '<td><a target="_blank" href="https://opendesktop.org/p/' + value.project_id + '">'
-                    + value.project_id + '</a></td>'
-                    + '<td>' + value.username + '</td>'
-                    + '<td class="number">' + value.cnt + '</td>'
-                    + '<td>' + value.ptitle + '</td>'
-                    + '<td>' + value.ctitle + '</td>'
-                    + '<td>' + value.pcreated_at + '</td>'
-                    + '</tr>';
-            });
-            table = table + "</table>";
-            $('#topDownloadsPerMonthTabContainer').empty();
-            $('#topDownloadsPerMonthTabContainer').append(table);
-        });
-    } 
-
-    $(".topDownloadsPerDayTab").click(function () {
-        $('#topDownloadsPerDayTabContainer').empty();
-        loadTopdownloadsperday();
-    });
-
-    $('#payoutTab').prepend(createMonthFilter('selectmonth'));
-    $('#selectmonth').change(function () {
-        $.getScript("/theme/flatui/js/stati/memberPayout.js");
-    });
-    $(".payoutTab").click(function () {
-        $('#detailContainer').empty();
-        $.getScript("/theme/flatui/js/stati/payoutyear.js");
-        $.getScript("/theme/flatui/js/stati/memberPayout.js");
-    });
-
-    // payout Category Monthly tab begin
-    $('#payoutCategoryMonthlyTab').prepend(createMonthFilter('selectmonthCategoryMonthly'));
-    $(".payoutCategoryMonthlyTab").click(function () {
-        $.getScript("/theme/flatui/js/stati/payoutCategoryMonthly.js");
-    });
-    $('#selectmonthCategoryMonthly').change(function () {
-        $('.payoutCategoryMonthlyTab').trigger('click');
-    });
-    // payout Category Monthly tab end
-
-
-    $('#payoutNewcomerTab').prepend(createMonthFilter('selectmonthNewcomer'));
-    $('#selectmonthNewcomer').change(function () {
-        $(".payoutNewcomerTab").trigger('click');
-    });
-    $(".payoutNewcomerTab").click(function () {
-        $('#payoutNewcomerTabContainer').empty();
-        let yyyymm = $("#selectmonthNewcomer option:selected").text();
-        $.getJSON("/backend/index/newcomer?yyyymm=" + yyyymm, function (response) {
-            let data = response.results;
-            let table = "<table class='tablestati'>";
-            $.each(data, function (index, value) {
-                table = table + '<tr><td><a target="_blank" href="https://opendesktop.org/member/' + value.member_id + '">' + value.member_id + '</a></td><td>' + value.username + '</td><td>' + value.paypal_mail + '</td><td class="number">' + value.amount + '</td></tr>';
-            });
-            table = table + "</table>";
-            $('#payoutNewcomerTabContainer').html(table);
-        });
-    });
-
-    $('#payoutNewloserTab').prepend(createMonthFilter('selectmonthNewloser'));
-    $('#selectmonthNewloser').change(function () {
-        $(".payoutNewloserTab").trigger('click');
-    });
-    $(".payoutNewloserTab").click(function () {
-        $('#payoutNewloserTabContainer').empty();
-        let yyyymm = $("#selectmonthNewloser option:selected").text();
-        $.getJSON("/backend/index/newloser?yyyymm=" + yyyymm, function (response) {
-            let data = response.results;
-            let table = "<table class='tablestati'>";
-            $.each(data, function (index, value) {
-                table = table + '<tr><td><a target="_blank" href="https://opendesktop.org/member/' + value.member_id + '">' + value.member_id + '</a></td><td>' + value.username + '</td><td>' + value.paypal_mail + '</td><td class="number">' + value.amount + '</td></tr>';
-            });
-            table = table + "</table>";
-            $('#payoutNewloserTabContainer').html(table);
-        });
-    });
-
-
-    $('#payoutMonthDiffTab').prepend(createMonthFilter('selectmonthMonthDiff'));
-    $('#selectmonthMonthDiff').change(function () {
-        $(".payoutMonthDiffTab").trigger('click');
-    });
-    $(".payoutMonthDiffTab").click(function () {
-        $('#payoutMonthDiffTabContainer').empty();
-        let yyyymm = $("#selectmonthMonthDiff option:selected").text();
-        $.getJSON("/backend/index/monthdiff?yyyymm=" + yyyymm, function (response) {
-            let data = response.results;
-            let table = "<table class='tablestati'>";
-            table = table + '<thead><tr><td>Member</td><td>Username</td><td class="number">Diff</td><td>month</td><td class="number">amount</td><td>last month</td><td  class="number">amount </td></tr></thead>';
-            $.each(data, function (index, value) {
-                table = table + '<tr><td><a target="_blank" href="https://opendesktop.org/member/' + value.member_id + '">' + value.member_id + '</a></td><td>' + value.username + '</td><td class="number">' + value.am_diff + '</td>'
-                    + '<td>' + value.ym_akt + '</td><td class="number">' + value.am_akt + '</td>'
-                    + '<td>' + value.ym_let + '</td><td class="number">' + value.am_let + '</td>'
-                ;
-            });
-            table = table + "</table>";
-            $('#payoutMonthDiffTabContainer').html(table);
-        });
-    });
-</script>
-
-
-<script type="text/javascript">
-    var parseTime = d3.timeParse("%Y%m"); 
-    window.selectedCatid = 0;
-    window.selectedTab = '';
-    window.selectedMonth;
-
-    $(document).ready(function () { 
-
-            $('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
-                var target = $(e.target).attr("href");
-                console.log(target);
-                if('#topDownloadsPerMonthTab' == target || '#payoutCategoryTab' ==target)
-                {
-                    var cattree = $('#category-tree-container');
-                    $(target).find('.filter').append(cattree);                   
-                } 
-                window.selectedTab = target;
-                window.selectedCatid = 0;
-                window.selectedCatTitle = '';
-                
-            });
-
-            $('body').on('click', '#category-tree a', function (event) {
-                event.preventDefault();
-                event.stopPropagation();            
-                var start = this.href.indexOf("cat");
-                var catid;
-                var title;
-                if(start<0) {
-                    catid = 0;
-                    title = 'All';
-                }else
-                {
-                    catid = this.href.substring(start+4, (this.href.length-1));  
-                    title = $(this).text();
-                }
-                window.selectedCatid = catid;
-                window.selectedCatTitle = title;
-                if(window.selectedTab=='#payoutCategoryTab')
-                {
-                    if($('#payoutCategoryLineChart').find('#payoutCategoryLineChart'+catid).length==0)
-                    {
-                        $('#payoutCategoryLineChart').append('<div class="chart-wrapper" id="payoutCategoryLineChart'+catid+'"> loading ... </div>');
-                        $.getScript("/theme/flatui/js/stati/payoutCategory.js");
-                    }
-                }
-                if(window.selectedTab=='#topDownloadsPerMonthTab')
-                {                    
-                    window.selectedMonth = $('#filterTopDownloadsMonth').val();
-                    loadTopdownloadspermonth();
-                }
-            });
-
-            $('#clearChartPanel').on('click',function(){
-                 $("#payoutCategoryLineChart").empty();
-            });
-
-
-           
-
-    });
-   
-
-
-
-</script>
-
-
+<script src="/theme/backend/js/backend_stati.js"></script>
 <script src="/theme/flatui/js/lib/multiline.js"></script>
 
 
