--- a/application/modules/default/views/scripts/user/partials/userHeader_top.phtml
+++ b/application/modules/default/views/scripts/user/partials/userHeader_top.phtml
@@ -43,7 +43,7 @@ $helpMemberUrl = new Default_View_Helper_BuildMemberUrl();
                             <a href="<?php echo $helpMemberUrl->buildMemberUrl($this->member->username); ?>"><?= $this->translate('Click here to go to your About Me page.') ?></a>
                         </div>
                         <div class="small lightgrey">
-                            <a href="<?php echo $helpMemberUrl->buildMemberUrl($this->member->username); ?>"><img src="/images_sys/gitlab.png" height="25" width="25"><?= $this->translate('Click here to go to your git-opendesktop page.') ?></a>
+                            <a href="https://git.opendesktop.org/<?php echo $this->member->username;?>"><img src="/images_sys/gitlab.png" height="15" width="15">&nbsp;<?= $this->translate('Click here to go to your git-opendesktop page.') ?></a>
                         </div>
                     </div>
                 </div>
