--- a/application/modules/default/views/scripts/authorization/login.phtml
+++ b/application/modules/default/views/scripts/authorization/login.phtml
@@ -66,7 +66,7 @@ $this->headMeta()->setName('robots', 'noindex, nofollow');
                   </div>
 
                     <div class="bottom margin-top-15">
-                    <div id="show-login-description" class="small light lightgrey">Join us?</div>
+                    <div id="show-login-description" class="small light lightgrey">New user?</div>
                     <div class="login2">
                       <a href="/register/" id="show-login-form" class="btn btn-native btn-min-width">
                         <i class="icon-white icon-lock"></i>
