--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -85,6 +85,7 @@ out: ../css/header.css, sourcemap: true, compress: true
           float: left;
           border-radius: 6px;
           box-shadow: none;
+
         }
 
         > a {
@@ -303,7 +304,7 @@ out: ../css/header.css, sourcemap: true, compress: true
         height: 40px;
 
         #site-header-right-top {
-          padding-right: 215px;
+          padding-right: 185px;
           width: 100%;
           padding-left: 10px;
 
@@ -313,6 +314,7 @@ out: ../css/header.css, sourcemap: true, compress: true
 
             input[type="text"]{
               min-width: 100%;
+              font-size: 16px;
             }
           }
 
