--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -274,6 +274,11 @@ out: ../css/header.css, sourcemap: true, compress: true
   }
 }
 
+/*#mobile-site-header {
+  height: 50px;
+  overflow: hidden;
+}*/
+
 @media (max-width:767px) {
   #site-header {
     height: 180px !important;
@@ -336,3 +341,26 @@ out: ../css/header.css, sourcemap: true, compress: true
     }
   }
 }
+
+/*@media (max-width: 610px){
+  #mobile-site-header {
+    height: 50px;
+    overflow: hidden;
+    padding: 5px 0;
+
+    #mobile-site-header-logo {
+      height: 40px;
+      width: auto;
+      float: left;
+
+      > a {
+        width: auto;
+        height: 100%;
+
+        > img {
+          max-height: 100%;
+        }
+      }
+    }
+  }
+}*/
