updated redirectme page

--- a/application/modules/default/views/scripts/home/redirectme.phtml
+++ b/application/modules/default/views/scripts/home/redirectme.phtml
@@ -13,7 +13,7 @@
 
             var img_g = document.getElementById('g-login');
             var img_src_g = img_g.getAttribute('data-src');
-            img.setAttribute('src', img_src_g);
+            img_g.setAttribute('src', img_src_g);
 
             return true;
         }
