--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -274,11 +274,11 @@ out: ../css/header.css, sourcemap: true, compress: true
   }
 }
 
-/*#mobile-site-header {
+#mobile-site-header {
   height: 50px;
   overflow: hidden;
-}*/
-
+}
+/*
 @media (max-width:767px) {
   #site-header {
     height: 180px !important;
@@ -341,8 +341,8 @@ out: ../css/header.css, sourcemap: true, compress: true
     }
   }
 }
-
-/*@media (max-width: 610px){
+*/
+@media (max-width: 610px){
   #mobile-site-header {
     height: 50px;
     overflow: hidden;
@@ -363,4 +363,4 @@ out: ../css/header.css, sourcemap: true, compress: true
       }
     }
   }
-}*/
+}
