mobile site header menu

--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -385,6 +385,7 @@ out: ../css/header.css, sourcemap: true, compress: true
           display: block;
           padding: 0 5px;
           height: 40px;
+          line-height: 40px;
           float: left;
         }
       }
