--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -387,6 +387,11 @@ out: ../css/header.css, sourcemap: true, compress: true
           height: 40px;
           line-height: 40px;
           float: left;
+          color: inherit !important;
+
+          span {
+            color: inherit !important;
+          }
         }
       }
     }
