--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -389,9 +389,15 @@ out: ../css/header.css, sourcemap: true, compress: true
           float: left;
           color: inherit !important;
 
-          span {
+          > span {
             color: inherit !important;
           }
+        }
+
+        span {
+          display: block;
+          float: left;
+          height: 40px;
         }
       }
     }
