--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -394,7 +394,7 @@ out: ../css/header.css, sourcemap: true, compress: true
           }
         }
 
-        span {
+        > span {
           display: block;
           float: left;
           height: 40px;
