--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -388,6 +388,7 @@ out: ../css/header.css, sourcemap: true, compress: true
           line-height: 40px;
           float: left;
           color: inherit !important;
+          cursor: pointer;
 
           > span {
             color: inherit !important;
