--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -398,7 +398,10 @@ out: ../css/header.css, sourcemap: true, compress: true
         > span {
           display: block;
           float: left;
-          height: 40px;
+          height: 20px;
+          border-right: 1px solid black;
+          border-left: 1px solid black;
+          margin: 10px;
         }
       }
     }
