--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -351,6 +351,7 @@ out: ../css/header.css, sourcemap: true, compress: true
     #site-header {
       height: 50px !important;
       padding: 0;
+      background-size: contain;
     }
   }
 
