--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -378,7 +378,9 @@ out: ../css/header.css, sourcemap: true, compress: true
       float: right;
       height: 40px;
 
-      #switch-menu {
+      #switch-menu,
+      #mobile-user-menu,
+      #mobile-search-menu {
         height: 40px;
         float: right;
 
