--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -398,7 +398,7 @@ out: ../css/header.css, sourcemap: true, compress: true
           }
         }
 
-        > span {
+        #switch-menu-seperator {
           display: block;
           float: left;
           height: 20px;
