--- a/application/modules/default/views/scripts/dl/index.phtml
+++ b/application/modules/default/views/scripts/dl/index.phtml
@@ -23,7 +23,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Download</title>
+    <title>Download/Install</title>
 </head>
 <body>
     <main id="ads-page">   
