--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -913,13 +913,10 @@ $this->inlineScript()->appendScript('
                                 }
 
                                 //downloadlink is now: domain/api/files/download/id/ID/s/TOKEN/t/TIMESTAMP/u/USERID/FILE_NAME
-                                var hash = '<?= $this->download_hash ?>';
-                                var timetamp = '<?= $this->download_timestamp ?>';
-                                var userid = '<?= $this->member_id?>';
-
-                                var downloadUrl = pploadApiUri + 'files/download/id/' + this.id + '/o/1/s/' + hash + '/t/' + timetamp + '/u/' + userid + '/' + this.name;
+                                var downloadUrl = "https://<?= $_SERVER["SERVER_NAME"]?>/p/<?= $this->project_id ?>/startdownload?file_id=" + this.id + "&file_name=" + this.name + "&file_type=" + this.type + "&file_size=" + this.size;
+                                
                                 var downloadLinkFilename = link ? this.name + ' (External Link)' : this.name;
-                                var downloadLink = '<a href="' + downloadUrl + '" id="data-link' + this.id + '">' + downloadLinkFilename + '</a>';
+                                var downloadLink = '<a href="' + downloadUrl + '" id="data-link' + this.id + '" class="opendownloadfile" data-file_id="' + this.id + '" data-file_name="' + this.name + '" data-file_type="' + this.type + '" data-file_size="' + this.size + '" data-project_id="<?= $this->project_id ?>"  data-link_type="download">' + downloadLinkFilename + '</a>';
 
                                 if(this.active == '1') {
                                     updatePploadFileBtnPerFile = updatePploadFileBtn;
@@ -2122,5 +2119,6 @@ $this->inlineScript()->appendScript('
             ImagePreview.setup();
             ProductForm.setup();
             ProductGallery.setup();
+            OpendownloadfileWerbung.setup();
         });
     ');
