--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -1030,6 +1030,6 @@ if(Zend_Auth::getInstance()->hasIdentity() && $identity->member_id==$this->produ
             PartialsButtonPlingProject.setup();
             TooltipUser.setup("tooltipuserleft","left");
             AppimagequestionOnClick.setup();
-            //OpendownloadfileWerbung.setup();
+            OpendownloadfileWerbung.setup();
         });
     ');
