--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -707,13 +707,13 @@ $this->inlineScript()->appendScript(
                         }
 
                         //downloadlink is now: domain/api/files/download/id/ID/s/TOKEN/t/TIMESTAMP/u/USERID/FILE_NAME
-                        var hash = '<?= $this->download_hash ?>';
-                        var timetamp = '<?= $this->download_timestamp ?>';
-                        var userid = '<?= $this->member_id?>';
-
-                        var downloadUrl = pploadApiUri + 'files/download/id/' + this.id + '/o/1/s/' + hash + '/t/' + timetamp + '/u/' + userid + '/' + this.name;
+                        $projectId = $('#modal-ppload').attr('data-product-id')
+                        var downloadUrl = "https://<?= $_SERVER["SERVER_NAME"]?>/p/"+$projectId+"/startdownload?file_id=" + this.id + "&file_name=" + this.name + "&file_type=" + this.type + "&file_size=" + this.size;
+                        
                         var downloadLinkFilename = link ? this.name + ' (External Link)' : this.name;
-                        var downloadLink = '<a href="' + downloadUrl + '" id="data-link' + this.id + '">' + downloadLinkFilename + '</a>';
+                        var downloadLink = '<a href="' + downloadUrl + '" id="data-link' + this.id + '" class="opendownloadfile" data-file_id="' + this.id + '" data-file_name="' + this.name + '" data-file_type="' + this.type + '" data-file_size="' + this.size + '" data-project_id="'+$projectId+'"  data-link_type="download">' + downloadLinkFilename + '</a>';
+
+
 
                         if(this.active == '1') {
                             updatePploadFileBtnPerFile = updatePploadFileBtn;
@@ -1660,6 +1660,7 @@ $this->inlineScript()->appendScript(
             $this->inlineScript()->appendScript(
                 '    $(document).ready(function(){
                         TagingLoopMyProducts.setup();
+                        OpendownloadfileWerbung.setup();
                     });
                 ');
 
