--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -406,6 +406,13 @@ out: ../css/header.css, sourcemap: true, compress: true
           border-left: 1px solid black;
           margin: 10px;
         }
+
+        .menu-content-wrapper {
+          float: left;
+          height: 40px;
+          line-height: 40px;
+          padding: 0 5px;
+        }
       }
     }
   }
