--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -412,6 +412,43 @@ out: ../css/header.css, sourcemap: true, compress: true
           height: 40px;
           line-height: 40px;
           padding: 0 5px;
+
+          #search-form {
+            height: 25px;
+            padding: 0;
+            margin: 6.5px 15px;
+            line-height: 25px;
+            position: relative;
+
+            input[type="text"]{
+              width: 100%;
+              min-width: 16em;
+              height: 25px;
+              padding: 0;
+              border: 1px solid #fff;
+              margin-bottom: -1px;
+              padding-right: 30px;
+              text-indent: 5px;
+              color: #6a7686;
+              float: left;
+              border-radius: 6px;
+              box-shadow: none;
+
+            }
+
+            > a {
+              top: 2px;
+              right: 0;
+              display: block;
+              width: 25px;
+              height: 25px;
+              background-image: url(/theme/flatui/img/icon-search-input-2.png);
+              background-position: center center;
+              position: absolute;
+              cursor: pointer;
+            }
+          }
+          
         }
       }
     }
