--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -364,6 +364,11 @@ out: ../css/header.css, sourcemap: true, compress: true
       width: auto;
       float: left;
 
+      &.mini-version {
+        width: 40px;
+        overflow: hidden;
+      }
+
       > a {
         width: auto;
         height: 100%;
