--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -364,17 +364,23 @@ out: ../css/header.css, sourcemap: true, compress: true
       width: auto;
       float: left;
 
-      &.mini-version {
-        width: 40px;
-        overflow: hidden;
-      }
-
       > a {
         width: auto;
         height: 100%;
 
         > img {
-          max-height: 100%;
+          max-height: 40px;
+        }
+      }
+
+      &.mini-version {
+        width: 40px;
+        overflow: hidden;
+
+        &.Android {
+          width: 24px;
+          height: 27px;
+          margin-top: 5px; 
         }
       }
     }
