--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -380,7 +380,6 @@ out: ../css/header.css, sourcemap: true, compress: true
         &.Android {
           width: 24px;
           height: 27px;
-          margin-top: 5px; 
         }
       }
     }
@@ -416,6 +415,7 @@ out: ../css/header.css, sourcemap: true, compress: true
           border-right: 1px solid black;
           border-left: 1px solid black;
           margin: 10px;
+          display: none;
         }
 
         .menu-content-wrapper {
