--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -392,19 +392,20 @@ out: ../css/header.css, sourcemap: true, compress: true
       #mobile-user-menu,
       #mobile-search-menu {
         height: 40px;
+        padding: 5px;
         float: right;
 
         a {
           display: block;
           padding: 0 5px;
-          height: 40px;
-          line-height: 40px;
+          height: 30px;
+          line-height: 30px;
           float: left;
-          color: inherit !important;
+          color: white;
           cursor: pointer;
 
           > span {
-            color: inherit !important;
+            color: white;
           }
         }
 
