--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -403,6 +403,8 @@ out: ../css/header.css, sourcemap: true, compress: true
           float: left;
           color: white;
           cursor: pointer;
+          border: 2px solid;
+          border-radius: 5px;
 
           > span {
             color: white;
