--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -395,7 +395,7 @@ out: ../css/header.css, sourcemap: true, compress: true
         padding: 5px;
         float: right;
 
-        a {
+        .menu-item {
           display: block;
           padding: 0 5px;
           height: 30px;
