--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -411,6 +411,10 @@ out: ../css/header.css, sourcemap: true, compress: true
           }
         }
 
+        .menu-item + .menu-item {
+          margin-left: 5px;
+        }
+
         #switch-menu-seperator {
           display: block;
           float: left;
