--- a/application/modules/default/views/scripts/home/index-opendesktop.phtml
+++ b/application/modules/default/views/scripts/home/index-opendesktop.phtml
@@ -57,12 +57,77 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
 @media (max-width:610px){
   .GridFlex-cell.sidebar-left {
     width: 100%;
-    flex: none;
+    flex: none !important;
     border: 0;
     border-bottom: 1px solid #ccd4d8;
   }
 
-  
+  .GridFlex-cell.content {
+    padding: 0;
+    min-width: 100% !important;
+  }
+
+  #featureProductsContainer {
+    height: auto !important;
+  }
+
+  #featureProductsContainer .feature_container {
+      width: 100%;
+      display: block;
+      margin: 0 auto;
+  }
+
+  #featureProductsContainer .feature_container .main_container {
+    float: left;
+    width: 100%;
+  }
+
+  .#featureProductsContainer .feature_container .feature_title {
+    width: 100%;
+    display: block;
+    float: left;
+    text-align: center;
+    height: 25px;
+    line-height: 30px;
+  }
+
+  #featureProductsContainer .feature_container .main_container .label_featured {
+    float: right;
+    position: absolute;
+    top: 30px;
+    right: 0;
+  }
+
+  #featureProductsContainer .feature_container .main_container .feature_image {
+    width: 100%;
+    margin: 0;
+    max-width: 100%;
+  }
+
+  #featureProductsContainer .feature_container .main_container .feature_image img {
+    margin: 0 auto;
+    display: table;
+    max-width: 100%;
+    width: 100%;
+    height: auto;
+  }
+
+  #featureProductsContainer .feature_container .main_container .feature_text {
+    width: 100%;
+    float: left;
+    padding: 15px;
+  }
+
+  #featureProductsContainer .feature_container .main_container .feature_text .feature_category {
+    width: 50%;
+  }
+
+  #featureProductsContainer .feature_container .main_container .feature_text .feature_rating {
+    padding-right: 0;
+    padding-top: 0;
+  }
+
+
 }
 
 </style>
