--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -476,26 +476,24 @@ out: ../css/header.css, sourcemap: true, compress: true
             height: 100%;
 
             ul {
-              position: absolute;
-              bottom: 0px;
+              position: relative;
+              bottom: 0;
               display: inline-table;
               list-style-type: none;
               margin: 0;
               padding: 0;
               z-index: 999;
               right: 0;
-              width: 175px;
+              width: 185px;
 
               li {
-                background-color: #609dca;
-                border-color: #a3acfd;
                 border-image: none;
-                border-radius: 5px 5px 0 0;
-                border-style: solid solid none;
-                border-width: 2px 2px 0;
-                height: 24px;
-                line-height: 24px;
-                margin-right: 2px;
+                border-radius: 5px;
+                border-style: solid;
+                border-width: 2px;
+                height: 30px;
+                line-height: 26px;
+                margin-right: 5px;
                 float: left;
 
                 a {
