--- a/application/modules/default/views/scripts/home/index-opendesktop.phtml
+++ b/application/modules/default/views/scripts/home/index-opendesktop.phtml
@@ -65,10 +65,12 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
   .GridFlex-cell.content {
     padding: 0;
     min-width: 100% !important;
+    padding: 0 5px;
   }
 
   #featureProductsContainer {
     height: auto !important;
+    margin-bottom: 15px;
   }
 
   #featureProductsContainer .feature_container {
@@ -127,6 +129,15 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
     padding-top: 0;
   }
 
+  .startpage-store .prod-widget-box {
+    padding: 0;
+    width: 100% !important;
+  }
+
+  #explore-content .GridFlex .sidebar-right {
+      width: 100% !important;
+      flex: none !important; 
+  }
 
 }
 
