--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -358,6 +358,7 @@ out: ../css/header.css, sourcemap: true, compress: true
   #mobile-site-header {
     height: 50px;
     padding: 5px;
+    padding-right: 10px;
 
     #mobile-site-header-logo {
       height: 40px;
