--- a/application/modules/default/views/scripts/home/index-opendesktop.phtml
+++ b/application/modules/default/views/scripts/home/index-opendesktop.phtml
@@ -66,6 +66,7 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
     padding: 0;
     min-width: 100% !important;
     padding: 0 5px;
+    padding-right: 5px !important;
   }
 
   #featureProductsContainer {
@@ -96,8 +97,11 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
   #featureProductsContainer .feature_container .main_container .label_featured {
     float: right;
     position: absolute;
-    top: 30px;
+    top: 25px;
     right: 0;
+    height: 25px;
+    line-height: 25px;
+    border-radius: 0 5px 0 5px;
   }
 
   #featureProductsContainer .feature_container .main_container .feature_image {
