--- a/httpdocs/theme/flatui/less/startpage.less
+++ b/httpdocs/theme/flatui/less/startpage.less
@@ -1,5 +1,5 @@
 .startpage-store{
-	padding-top:0px;	
+	padding-top:0px;
 	.noborder
 	{
 	  	border:0px !important;
@@ -13,12 +13,12 @@
 	    	border-right: 1px solid #ccd4d8;
 	  }
 	.content{
-		padding-top: 15px;    
+		padding-top: 15px;
 		min-width: 400px !important;
 		.blockpadding{
 			padding-top: 20px;
 		}
-		
+
 		.contentcontainer{
 		        	padding-right: 15px;
 		        	padding-left: 15px;
@@ -28,7 +28,7 @@
 		        		height: 17px;
 		        	}
 		        	.new-products{
-		        		
+
 		        		.row
 		        		{
 		        			margin-top: 10px;
@@ -44,11 +44,11 @@
 			    	.cntComments
 			    	    {
 			    	        font-size: smaller;
-			    	     
+
 			    	    }
 			    	.packagetypeos
 			    	    {
-			    	        margin: 0px;      
+			    	        margin: 0px;
 			    	        float: none;
 			    	    }
 			    	 .productimg
@@ -64,11 +64,11 @@
 			    	     }
 			    	 .productrow:last-child {
 			    	             border-bottom: none;
-			    	         }   
+			    	         }
 
 		        	}
 		        	.newusers{
-		        		
+
 		        		.u-wrap{
 		        			float: left;
 		        			width: 100%;
@@ -107,16 +107,16 @@
 		        			 	margin: 0;
 		        			 }
 		        			span.small {
-		        				font-size: 13px;		        				
-		        				color: #444;		        						        				
+		        				font-size: 13px;
+		        				color: #444;
 		        				position: absolute;
 		        				bottom: 5px;
 		        				right: 5px;
 		        			}
 		        			 div.projecttitle{
-					            font-size: 11px;					    
+					            font-size: 11px;
 					        }
-		        			
+
 
 		        		}
 		        	}
@@ -125,9 +125,9 @@
 	}
 	.sidebar-right{
 	    	padding-top: 20px;
-	    	min-width: 320px !important;	  
+	    	min-width: 320px !important;
 	    	padding-left: 10px;
-	    	border-left: 1px solid #ccd4d8;    
+	    	border-left: 1px solid #ccd4d8;
 	    	background-color: #f1f1f1;
 	    	.downloadDiv{
 	    	  	background-color: transparent !important;
@@ -141,15 +141,15 @@
 	    	#lastcomments{
 	    	  	border: 1px solid #ccd4d8 !important;
 	    	}
-	    	
+
 	}
 	.labelTitle{
 	  	display:block;
-	  	padding-top: 15px; 
+	  	padding-top: 15px;
 	  	padding-bottom: 15px;
 	}
 	.prod-widget-box{
-	   border: 0px !important;	  
+	   border: 0px !important;
 	}
 	.panel{
 	    background-color: #f1f1f1;
@@ -167,11 +167,11 @@
 
 	.supportersrow{
 
-		  .imgpopover{        
+		  .imgpopover{
 		        max-width: 200px;
-		        max-height: 160px;       
+		        max-height: 160px;
 		    }
-		    .profile-img-product{       
+		    .profile-img-product{
 		        display: block;
 		        margin: auto;
 		    }
@@ -189,63 +189,63 @@
 			font-size: 12px;
 		}
 		.main_container{
-			width: 100%; 
-			border:1px solid #DFDCDA; 
-			border-radius: 3px; 
+			width: 100%;
+			border:1px solid #DFDCDA;
+			border-radius: 3px;
 			background-color: white;
 			margin-top:5px;
 			.feature_image{
-				float: left; 
+				float: left;
 				margin-right: 20px;
 				img{
-					width:300px; 
+					width:300px;
 					height: 230px;
 				}
 			}
 			.feature_text{
-				display:block; 
-				width:450px; 
-				float:right; 
+				display:block;
+				width:450px;
+				float:right;
 				margin-right:20px;
 				.feature_category{
 					width:340px;
 				}
 				.feature_rating{
-					flex: 1; 
-					text-align: right; 
+					flex: 1;
+					text-align: right;
 					width: 80px;
 					padding-right:10px;
 					padding-top: 10px;
 					font-size: smaller;
 				}
 				.feature_text_title{
-					display: block; 
+					display: block;
 					font-size: small;
 				}
 				.feature_text_auth{
-					display:block; 
-					padding-top: 10px; 
+					display:block;
+					padding-top: 10px;
 					font-size: small;
 					.auto_link{
 						float: left;
 						img{
-							width: 30px; 
-							height: 30px; 
+							width: 30px;
+							height: 30px;
 							border-radius: 50%;
 						}
 					}
 					.created_by{
-						line-height:2; 
+						line-height:2;
 						padding-left:5px;
 					}
 				}
 				.feature_text_comments{
-					display: block; 
+					display: block;
 					font-size: small;
 					margin-top:10px;
 				}
 				.feature_text_description{
-					display: block; 
+					display: block;
 					font-size: small;
 					padding-top: 15px;
 				}
@@ -258,21 +258,21 @@
 			}
 
 			.button_next{
-					display: block; 
+					display: block;
 					float: right;
 					position: relative;
-					bottom: 15px; 
+					bottom: 15px;
 					right: 5px;
 				}
 			.label_featured{
-					display: block; 
+					display: block;
 					float: right;
 					position: relative;
-					
+
 				}
 		}
 	}
-	
+
 }
 
 .tooltipuserplingscontainer{
@@ -283,13 +283,109 @@
 		width: 60px;
 		overflow: hidden;
 		img{
-			width:40px; 
+			width:40px;
 			height:40px;
 			border:1px solid #ccc;
 			border-radius: 999px;
-		}		
+		}
 		.caption{
 			display: block;
 		}
 	}
+}
+
+@media (max-width:610px){
+
+	.startpage-store {
+	
+	  .GridFlex-cell.sidebar-left {
+	    width: 100%;
+	    flex: none !important;
+	    border: 0;
+	    border-bottom: 1px solid #ccd4d8;
+	  }
+
+	  .GridFlex-cell.content {
+	    padding: 0;
+	    min-width: 100% !important;
+	    padding: 0 5px;
+	    padding-right: 5px !important;
+	  }
+
+	  #featureProductsContainer {
+	    height: auto !important;
+	    margin-bottom: 15px;
+	  }
+
+	  #featureProductsContainer .feature_container {
+	      width: 100%;
+	      display: block;
+	      margin: 0 auto;
+	  }
+
+	  #featureProductsContainer .feature_container .main_container {
+	    float: left;
+	    width: 100%;
+	  }
+
+	  #featureProductsContainer .feature_container .feature_title {
+	    width: 100%;
+	    display: block;
+	    float: left;
+	    text-align: center;
+	    height: 25px;
+	    line-height: 30px;
+	  }
+
+	  #featureProductsContainer .feature_container .main_container .label_featured {
+	    float: right;
+	    position: absolute;
+	    top: 25px;
+	    right: 0;
+	    height: 25px;
+	    line-height: 25px;
+	    border-radius: 0 5px 0 5px;
+	  }
+
+	  #featureProductsContainer .feature_container .main_container .feature_image {
+	    width: 100%;
+	    margin: 0;
+	    max-width: 100%;
+	  }
+
+	  #featureProductsContainer .feature_container .main_container .feature_image img {
+	    margin: 0 auto;
+	    display: table;
+	    max-width: 100%;
+	    width: 100%;
+	    height: auto;
+	  }
+
+	  #featureProductsContainer .feature_container .main_container .feature_text {
+	    width: 100%;
+	    float: left;
+	    padding: 15px;
+	  }
+
+	  #featureProductsContainer .feature_container .main_container .feature_text .feature_category {
+	    width: 80%;
+	  }
+
+	  #featureProductsContainer .feature_container .main_container .feature_text .feature_rating {
+	    padding-right: 0;
+	    padding-top: 0;
+	  }
+
+	  .startpage-store .prod-widget-box {
+	    padding: 0;
+	    width: 100% !important;
+	  }
+
+	  #explore-content .GridFlex .sidebar-right {
+	      width: 100% !important;
+	      flex: none !important;
+	  }
+
+	}
+
 }
