--- a/httpdocs/theme/flatui/less/startpage.less
+++ b/httpdocs/theme/flatui/less/startpage.less
@@ -1,3 +1,5 @@
+out: ../css/startpage.css, sourcemap: true, compress: true
+
 .startpage-store{
 	padding-top:0px;
 	.noborder
@@ -297,7 +299,7 @@
 @media (max-width:610px){
 
 	.startpage-store {
-	
+
 	  .GridFlex-cell.sidebar-left {
 	    width: 100%;
 	    flex: none !important;
