--- a/httpdocs/theme/flatui/less/startpage.less
+++ b/httpdocs/theme/flatui/less/startpage.less
@@ -300,6 +300,10 @@ out: ../css/startpage.css, sourcemap: true, compress: true
 
 	.startpage-store {
 
+		.sidebar-left {
+		    background-color: #e4e4e4;	
+		}
+
 	  .GridFlex-cell.sidebar-left {
 	    width: 100%;
 	    flex: none !important;
