--- a/httpdocs/theme/flatui/less/startpage.less
+++ b/httpdocs/theme/flatui/less/startpage.less
@@ -301,7 +301,7 @@ out: ../css/startpage.css, sourcemap: true, compress: true
 	.startpage-store {
 
 		.sidebar-left {
-		    background-color: #e4e4e4;	
+		    background-color: #e4e4e4;
 		}
 
 	  .GridFlex-cell.sidebar-left {
@@ -382,7 +382,7 @@ out: ../css/startpage.css, sourcemap: true, compress: true
 	    padding-top: 0;
 	  }
 
-	  .startpage-store .prod-widget-box {
+	  .prod-widget-box {
 	    padding: 0;
 	    width: 100% !important;
 	  }
