--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -441,6 +441,7 @@ out: ../css/header.css, sourcemap: true, compress: true
             margin: 1.5px 0;
             line-height: 27px;
             position: relative;
+            margin-right: 30px;
 
             input[type="text"]{
               width: 100%;
