--- a/application/modules/default/views/scripts/home/index-opendesktop.phtml
+++ b/application/modules/default/views/scripts/home/index-opendesktop.phtml
@@ -147,6 +147,14 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
 	      flex: none !important;
 	  }
 
+    #explore-content .sidebar-right-info {
+      padding-left: 10px;
+    }
+
+    .commentstore {
+      padding: 5px;
+    }
+
 }
 
 
