--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -366,6 +366,18 @@ body {
           margin: 0 5px;
           margin-top: 2px;
         }
+
+        &#userLoginDropdown {
+          width: 26px;
+          height: 25px;
+          position: relative;
+
+          img {
+            position: absolute;
+            top: 0;
+            left: 0;
+          }
+        }
       }
 
       .dropdown-menu {
